--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.3.0",
-    "dotenv": "^10.0.0",
+    "dotenv-webpack": "^7.0.3",
     "eslint-plugin-vue": "^7.18.0",
     "netlify-cli": "^6.10.1",
     "postcss": "^8.3.9",
